lab5/03.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: study
  name: my-ingress-study
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /first1
            pathType:  Prefix
            backend:
              service:
                name: first1
                port:
                  name: svc-port
          - path: /second1
            pathType: Prefix
            backend:
              service:
                name: second1
                port:
                  name: svc-port
          - path:  /
            pathType: Prefix
            backend:
              service:
                name:  error1
                port:
                  name: svc-port
